# nseekfs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  TODO.md  buildworkflow.md  gitactions.md  pypltest.md  pyproject.toml  python  test.py  test_func.py  test_pes.py  teste.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  security.yml
examples/: basic_usage.py
nseek/: __init__.py  engine_core.py  hierarchical.py  highlevel.py
nseek/tests/: quora.py  real_test.py  sim_hug.py
nseekfs/: .gitignore  Cargo.toml  README.md  __init__.py  bench.py  gerar.py  gerar_csv.py  highlevel.py  npy_engine.py  nseek_hierarchical_engine.py  nseek_highlevel.py  perc.py  pyproject.toml  tes2.py  tes3.py  test.py  teste,py  validation.py
nseekfs/src/: ann.rs  engine.rs  io.rs  lib.rs  utils.rs
nseekfs/tests/: gerar_csv.py  gerar_hug.py  newtest.py  perc.py  quora.py  real_test.py  sim_hug.py  test.py
scripts/: build_wheels.py  test_platform_builds.sh  validate_distributions.py
src/: ann.rs  ann_bridge.rs  ann_opt.rs  engine.rs  io.rs  lib.rs  prebin.rs  prepare.rs  query.rs
src/internal/: hierarchical.py
src/utils/: logger.rs  mod.rs  vector.rs
test/: ns.py  read.md
tests/: test_basic.py  test_critical_safety.py
