[package]
name = "nseekfs"    # ← CORRIGIR para "nseekfs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance top-k vector search engine with Rust backend and Python bindings"
readme = "README.md"
repository = "https://github.com/diogonovo/nseekfs"
homepage = "https://github.com/diogonovo/nseekfs"
keywords = [
    "vector search",
    "semantic search",
    "approximate nearest neighbors",
    "rust",
    "python bindings",
    "pyo3",
    "ann",
    "faiss alternative",
    "top-k",
    "high-performance"
]
categories = [
    "science",
    "algorithms",
    "data-structures",
    "artificial-intelligence",
    "data-science",
    "command-line-utilities"
]

[lib]
name = "nseekfs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
csv = "1.3"
wide = "0.7"
ordered-float = "4"
memmap2 = "0.7"
fast-float = "0.2"
rand = "0.8"
rand_distr = "0.4"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
dirs = "5.0.1"
dashmap = "5.5"
hashbrown = "0.15.5"
smallvec = "1.15.1"
pdqselect = "0.1.1"
numpy = "0.20"
half = "2.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1