[package]
name = "nseekfs"
version = "0.1.0"
edition = "2021"

[lib]
name = "nseekfs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rayon = "1.8"
csv = "1.3"
wide = "0.7"
ordered-float = "4"
memmap2 = "0.7"
bytemuck = { version = "1.13", features = ["derive"] }
fast-float = "0.2"
rand = "0.8"
rand_distr = "0.4"