[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "nseekfs"
version = "0.1.0"
description = "Fast top-k vector similarity search over CSVs"
authors = [{ name = "Diogo Novo" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
bindings = "pyo3"
